// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Company Hide 1`] = `
<DocumentFragment>
  <div
    data-testid="1"
  >
    <div>
      Hide Company
    </div>
    <div>
      <div>
        Romaguera-Crona
      </div>
      <div>
        Multi-layered client-server neural-net
      </div>
      <div>
        harness real-time e-markets
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Company renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="1"
  >
    <div>
      View Company
    </div>
  </div>
</DocumentFragment>
`;
